# toxtrig

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  toxic_triggers.py
examples/: analyze_founta.py
tests/: test_analyze_text.py  test_get_words.py
toxicTrig/: __init__.py  toxic_triggers.py
