[metadata]
name = toxicTrig
version = 0.3.0
description = full set of words that trigger toxicity
long_description = file: README.md
long_description_content_type = text/markdown
author = Xuhui Zhou, Maarten Sap
author_email = xuhuiz@cs.cmu.edu
url = https://github.com/XuhuiZhou/toxtrig
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7, <4
packages = toxicTrig
install_requires =
    setuptools
    pandas

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    pre-commit==3.0.1
    pytest==7.1.2
    mypy==1.1.1
    beartype==0.12.0
    nbmake
    types-setuptools

[mypy]
strict = true